<resources>
    <string name="app_name">CartoO</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="MainActivity3">Dashboard</string>
    <string name="Art">Art is a fantastic form to connect with people, and one of the most amazing ways to explore a new city. While there are tons of tour apps to specifically take you there, there is something different when you try and explore them yourself.</string>
    <string name="carto">Cart-O is an app specifically made for explorers that like to go on an unexplored path.\n The ones who want to try new things and understand how a city is built and what makes the place tick! It is not designed to give you a specific route but will give you hints as to what you are going to look for and where you might find them.</string>
    <string name="carto1">Follow the arrows and faint lines on the map to orient yourself to some of the rare art pieces of Dresden and get to know this quaint little city a little better!</string>
    <string name="carto2">Welcome to the mapping world! Happy orienteering\n</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Canaletto Blick</string>
    <string name="fun_fact">Canaletto's work was crucial to rebuild the city after WWII</string>
    <string name="description">This view inspired Bernardo Bellotto, known as Canaletto, to paint Dresden from the "Right Bank of the Elbe below the Augustus Bridge". Take a look through the frame and see how much has changed this city from the 18th century until now, following one of the most relevant urban landscape depictions of Dresden.</string>
</resources>