<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/canaletto_blick_art"
    tools:context=".PopWindow">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="363dp"
        android:background="@drawable/top_gradient"
        android:fontFamily="@font/merienda"
        android:gravity="end"
        android:padding="20dp"
        android:shadowColor="@color/hotpink"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="@string/name"
        android:textColor="@color/green_tinge"
        android:textSize="32sp"
        android:textStyle="bold"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@+id/fun_fact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/fun_fact"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/merienda"
        android:gravity="bottom"
        android:padding="20dp"
        android:shadowColor="@color/hotpink"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="@string/fun_fact"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scroller"
        app:layout_constraintStart_toStartOf="@+id/gradient"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fun_fact"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:text="@string/description"
            android:textAlignment="gravity"
            android:textColor="@color/green_tinge"
            android:textSize="16dp"
            android:textStyle="normal"
            android:translationZ="5dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="580dp" />
    </ScrollView>

    <View
        android:id="@+id/gradient"
        android:layout_width="0dp"
        android:layout_height="292dp"
        android:layout_marginTop="440dp"
        android:background="@drawable/down_gradient"
        android:translationZ="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
